--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Happy Birthday to you" />
     <meta
       property="og:description"
-      content="Wishing you a very Happy Birthday Dear"
+      content="Wishing you a very Happy 18th Birthday Dear"
     />
     <meta
       property="og:image"
@@ -118,7 +118,7 @@
           </div>
         </div>
         <div class="HBD-text">
-          <p class="HBD">Wish you a very Happy Birthday</p>
+          <p class="HBD">Wish you a very Happy 18th Birthday</p>
           <p class="nickname">Christian</p>
         </div>
       </div>
